# RadarAnnotation_LRDE

./: AUTOMATIC_LABEL_RECOVERY.md  CHANGES_SUMMARY.md  CIRCULAR_PPI_IMPLEMENTATION.md  CIRCULAR_PPI_SUMMARY.md  CIRCULAR_PPI_VISUAL_GUIDE.txt  COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  CPP_DEPLOYMENT_SUMMARY.md  CPP_INFERENCE_COMPLETE.md  FIX_MISSING_OUTPUT_COLUMNS.md  FIX_PREDICTION_OUTPUT_COLUMNS.md  FIX_SUMMARY.md  HIGH_VOLUME_GUI_INTEGRATION.md  HIGH_VOLUME_SIMULATION_SUMMARY.md  HIGH_VOLUME_VISUAL_GUIDE.txt  IMPLEMENTATION_COMPLETE_MULTI_OUTPUT.md  INSUFFICIENT_CLASSES_FIX.md  INTERACTIVE_FEATURES_QUICK_REF.txt  ML_Hyperparameter_Tuning_Proposal.pptx  MODEL_EVALUATION_FIX.md  MODEL_EVALUATION_QUICK_FIX.txt  MODEL_LOADING_FIX_SUMMARY.md  MULTIOUTPUT_QUICKREF.md  MULTI_OUTPUT_COMPLETE.md  MULTI_OUTPUT_CPP_GUIDE.md  NUM_CLASS_PARAMETER_FIX.md  PPI_COLORED_SEGMENTS_SUMMARY.md  PPI_ENHANCEMENTS.md  PPI_POLAR_COORDINATES.md  PPI_POLAR_IMPLEMENTATION_SUMMARY.md  PPI_THEME_QUICK_REFERENCE.md  PPI_THEME_UPDATE_SUMMARY.md  PROJECT_OVERVIEW.md  QUICKSTART_CPP.md  QUICK_FIX_APPLIED.md  QUICK_FIX_DATAFRAME_AMBIGUITY.md  QUICK_FIX_GUIDE.md  QUICK_FIX_SUMMARY.txt  QUICK_REFERENCE_GUI_UPDATES.md  QUICK_START_FIX.md  (+38 more)
config/: default_config.json
cpp_inference/: CMakeLists.txt  README.md  build.sh  main.cpp  main_multioutput.cpp  radar_tagger.cpp  radar_tagger.h  radar_tagger_multioutput.cpp  radar_tagger_multioutput.h
cpp_models/lstm/: lstm_model.tflite  test_data.csv  test_data_info.json
docs/: CIRCULAR_PPI_QUICK_START.md  COLORED_SEGMENTS_FIX.md  COMPOSITE_LABELS_FIX.md  DATAFRAME_AMBIGUITY_FIX.md  DELIVERABLES_SUMMARY.md  DEPLOYMENT.md  FEATURES_VISUAL_GUIDE.md  FIX_SUMMARY_NUM_CLASS.md  GUI_ENHANCEMENT_SUMMARY.md  GUI_ERROR_FIX_SUMMARY.md  GUI_FIX.md  GUI_NOT_OPENING_FIX.md  GUI_VISUAL_CHANGES.md  HIGH_VOLUME_DATASET_GUIDE.md  HYPERPARAMETER_TUNING_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INTEGRATION_SUMMARY.md  INTERACTIVE_FEATURES_IMPLEMENTATION_SUMMARY.md  INTERACTIVE_PLOTTING_FEATURES.md  LABEL_DIVERSITY_GUIDE.md  LABEL_DIVERSITY_SOLUTION.md  MODEL_EVALUATION_FEATURE.md  MODEL_FILTER_CHANGES.md  MONO_COLOR_THEME.md  MULTI_OUTPUT_AUTO_TAGGING_GUIDE.md  MULTI_OUTPUT_GUI_INTEGRATION.md  MULTI_OUTPUT_IMPLEMENTATION_SUMMARY.md  QUICK_START.md  QUICK_START_AUTO_RECOVERY.md  QUICK_START_COLORED_SEGMENTS.md  QUICK_START_HIGH_VOLUME_GUI.md  QUICK_START_INTERACTIVE_PLOTS.md  QUICK_START_MULTI_OUTPUT.md  QUICK_START_PPI_FEATURES.md  SETTINGS_TAB_COMPLETE.md  SOLUTION_SUMMARY.md  START_HERE.md  START_HERE_INTERACTIVE_FEATURES.md  (+6 more)
output/test_lstm/: lstm_metrics.json  lstm_model.h5  lstm_model_metadata.pkl
output/test_transformer/: transformer_metrics.json  transformer_model.h5  transformer_model_metadata.pkl
src/: __init__.py  ai_engine.py  autolabel_engine.py  config.py  data_engine.py  gui.py  label_transformer.py  multi_output_adapter.py  plotting.py  report_engine.py  sim_engine.py  utils.py
tests/: __init__.py  test_autolabel_engine.py  test_data_engine.py
